--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" >
 
-<title>CCTT</title>
+<title>CCXX</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -29,7 +29,7 @@
     <div class="top-header-container">
       <a class="site-title-container" href="https://fxy1549.github.io">
         <img src="https://fxy1549.github.io/images/avatar.png?v=1582456994423" class="site-logo">
-        <h1 class="site-title">CCTT</h1>
+        <h1 class="site-title">CCXX</h1>
       </a>
       <div class="menu-btn" @click="menuVisible = !menuVisible">
         <div class="line"></div>
