--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <front size="4" color="white" faxe="New Times Roman"><center>A blog about our life</front>
     </div>
     <div class="site-footer">
-      Powered by <a href="https://github.com/getgridea/gridea" target="_blank">Gridea</a> | <a class="rss" href="https://fxy1549.github.io/atom.xml" target="_blank">RSS</a>
+      Powered by <a href="https://github.com/getgridea/gridea" target="_blank">JX</a> | <a class="rss" href="https://fxy1549.github.io/atom.xml" target="_blank">RSS</a>
     </div>
   </div>
 </div>
