--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="top-container" data-aos="fade-right">
     <div class="top-header-container">
       <a class="site-title-container" href="https://fxy1549.github.io">
-        <img src="https://fxy1549.github.io/images/avatar.png?v=1582456994423" class="site-logo">
+        <img src="https://fxy1549.github.io/images/avatar.jpg?v=1582456994423" class="site-logo">
         <h1 class="site-title">CCXX</h1>
       </a>
       <div class="menu-btn" @click="menuVisible = !menuVisible">
@@ -81,7 +81,7 @@
       <front size="4" color="white" faxe="New Times Roman"><center>A blog about our life</front>
     </div>
     <div class="site-footer">
-      Powered by <a href="https://github.com/getgridea/gridea" target="_blank">JX</a> | <a class="rss" href="https://fxy1549.github.io/atom.xml" target="_blank">RSS</a>
+      Powered by <a href="https://github.com/getgridea/gridea" target="_blank">JX</a> | <a class="rss" href="https://fxy1549.github.io/atom.xml" target="_blank">JXY</a>
     </div>
   </div>
 </div>
@@ -119,7 +119,7 @@
               </div>
               
                 <a class="right" href="https://fxy1549.github.io/post/Hello-My Love Xin/">
-                  <div class="feature-container" style="background-image: url('https://fxy1549.github.io/post-images/Hello-My Love Xin.JPG')">
+                  <div class="feature-container" style="background-image: url('https://fxy1549.github.io/post-images/Hello-My Love Xin.jpg')">
                   </div>
                 </a>
               
